tests/valid/scoping/declare_block.rs
/*
return: 0
*/

main(): int {
    if (5) {
        i: int = 0;
        return i;
    }
}