tests/invalid/conditional_statements/declare_statement.rs
/*
fail: 1
*/

main(): i32 {
    if (5)
        i: i64 = 0;
}